--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -13,4 +13,4 @@ jobs:
         with:
           python-version: '3.x'
       - name: Run Python script
-        run: python task2.py 
+        run: python task2.py
